tests/neg/syntax_pp_end_without_condition.baa
// RUN: expect-fail
// EXPECT: #نهاية بدون شرط قبلي مطابق

#نهاية

صحيح الرئيسية() {
    إرجع ٠.
}
